add authentification with CAS, to be tested

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
     build: ./backend
     volumes:
       - ./storage/uploads:/storage/uploads
+      - ./backend/data:/app/data  # ← AJOUTER CETTE LIGNE
+    env_file:
+      - ./backend/.env  # ← AJOUTER CETTE LIGNE
     expose:
       - "8000"
 
