--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,8 +1,13 @@
 [project]
-name = "image-backend"
+name = "euclid-backend"
 version = "0.1.0"
+description = "Euclid Pretty Pics Portal Backend"
+requires-python = ">=3.12"
+
 dependencies = [
     "fastapi",
     "uvicorn",
-    "python-multipart"
+    "python-multipart",
+    "httpx",
+    "python-dotenv"
 ]
