--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,7 +7,10 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi",
     "uvicorn",
-    "python-multipart"
+    "python-multipart",
+    "sqlalchemy>=2.0.46",
+    "alembic>=1.18.4",
+    "pydantic>=2.12.5",
 ]
 
 [project.optional-dependencies]
