--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "sqlalchemy>=2.0.46",
     "alembic>=1.18.4",
     "pydantic>=2.12.5",
+    "psycopg2-binary>=2.9.11",
+    "python-dotenv>=1.2.1",
 ]
 
 [project.optional-dependencies]
