--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "psycopg2-binary>=2.9.11",
     "python-dotenv>=1.2.1",
     "python-magic>=0.4.27",
+    "slowapi>=0.1.9",
 ]
 
 [project.optional-dependencies]
